--- a/SUIBE_DID_Data_Manager/templates/admin/admin.html
+++ b/SUIBE_DID_Data_Manager/templates/admin/admin.html
@@ -25,19 +25,20 @@
                 <p class="mb-1">created in: {{ user.created_at.strftime('%Y-%m-%d %H:%M:%S') }}</p>
                 {% if user.active %}
                     {% if not user.is_admin %}
-                        <a href="{{ url_for('admin.cancleactive', username=user.username) }}"><button>Cancel Active</button></a>
+                        <a href="{{ url_for('admin.cancleactive', username=user.username) }}" style="margin-top: 12px"><button class="btn-danger">Cancel Active</button></a>
                     {% endif %} 
                 {% else %}
                     {% if not user.is_admin %}
-                        <a href="{{ url_for('admin.addactive', username=user.username) }}"><button>Add Active</button></a>
+                        <a href="{{ url_for('admin.addactive', username=user.username) }}" style="margin-top: 12px"><button class="btn-success">Add Active</button></a>
                     {% endif %}    
                 {% endif %}
+                <br>
                 <!-- <a href="/"><button {% if user.active %}disabled="disabled"{% endif %}>is_active</button></a> -->
         {% endfor %}
 
-        <a href="{{ url_for('admin.add_all_active') }}"><button>Add ALL Active</button></a>
-        
-        <a href="{{ url_for('admin.cancle_all_active') }}"><button>Cancel ALL Active</button></a>
+        <a href="{{ url_for('admin.add_all_active') }}" style="margin-top: 12px"><button class="btn-success">Add ALL Active</button></a>
+        <br>
+        <a href="{{ url_for('admin.cancle_all_active') }}"><button class="btn-danger">Cancel ALL Active</button></a>
 
     </div>
 </div>
