--- a/SUIBE_DID_Data_Manager/templates/nav.html
+++ b/SUIBE_DID_Data_Manager/templates/nav.html
@@ -16,28 +16,17 @@
         </a>
       </li>
 
-{#      <li class="nav-item dropdown">#}
-{#        <a class="nav-link dropdown-toggle" data-toggle="dropdown">配置</a>#}
-{#        <ul class="dropdown-menu" role="menu">#}
-{#          <li class="nav-item"><a href="{{ url_for('public.sdk_config') }}">SDK配置</a></li>#}
-{#          <li class="nav-item"><a href="{{ url_for('public.about') }}">节点配置</a></li>#}
-{#        </ul>#}
-{#      </li>#}
+
       {% if current_user and current_user.is_authenticated %}
-<!--       
+<!--
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('user.sdk_config') }}">配置 SDK</a>
-        
+
       </li> -->
-    
+
       {% endif %}
 
-{#      <li class="nav-item">#}
-{#        <a class="nav-link" href="https://www.99kies.club" target="_blank">可运行图书馆</a>#}
-{#      </li>#}
-{#      <li class="nav-item">#}
-{#        <a class="nav-link" href="https://wetty.cnmf.net.cn/wetty" target="_blank">多链虚拟控制台</a>#}
-{#      </li>#}
+
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('public.about') }}">关于</a>
       </li>
@@ -58,14 +47,14 @@
       </li>
     </ul>
     {% elif form %}
-{#   <form class="form-inline" id="loginForm" method="POST" action="/" role="login">#}
-{#      <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />#}
-{#      <div class="input-group mb-2 mr-sm-2">#}
-{#        {{ form.username(placeholder="Username", class_="form-control mr-sm-1 my-auto") }} {{ form.password(placeholder="Password",#}
-{#        class_="form-control mr-sm-1 my-auto") }}#}
-{#        <button class="btn btn-light btn-primary m-auto" type="submit">Login</button>#}
-{#      </div>#}
-{#    </form>#}
+  <form class="form-inline" id="loginForm" method="POST" action="/" role="login">
+     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
+     <div class="input-group mb-2 mr-sm-2">
+       {{ form.username(placeholder="Username", class_="form-control mr-sm-1 my-auto") }} {{ form.password(placeholder="Password",
+       class_="form-control mr-sm-1 my-auto") }}
+       <button class="btn btn-light btn-primary m-auto" type="submit">Login</button>
+     </div>
+   </form>
     <ul class="navbar-nav my-auto">
       <li class="nav-item">
         <a class="nav-link navbar-text" href="{{ url_for('public.register') }}">Create account</a>
