--- a/SUIBE_DID_Data_Manager/templates/nav.html
+++ b/SUIBE_DID_Data_Manager/templates/nav.html
@@ -18,11 +18,7 @@
 
 
       {% if current_user and current_user.is_authenticated %}
-<!--
-      <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('user.sdk_config') }}">配置 SDK</a>
 
-      </li> -->
 
       {% endif %}
 
@@ -47,19 +43,19 @@
       </li>
     </ul>
     {% elif form %}
-  <form class="form-inline" id="loginForm" method="POST" action="/" role="login">
-     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
-     <div class="input-group mb-2 mr-sm-2">
-       {{ form.username(placeholder="Username", class_="form-control mr-sm-1 my-auto") }} {{ form.password(placeholder="Password",
-       class_="form-control mr-sm-1 my-auto") }}
-       <button class="btn btn-light btn-primary m-auto" type="submit">Login</button>
-     </div>
-   </form>
-    <ul class="navbar-nav my-auto">
-      <li class="nav-item">
-        <a class="nav-link navbar-text" href="{{ url_for('public.register') }}">Create account</a>
-      </li>
-    </ul>
+{#  <form class="form-inline" id="loginForm" method="POST" action="/" role="login">#}
+{#     <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />#}
+{#     <div class="input-group mb-2 mr-sm-2">#}
+{#       {{ form.username(placeholder="Username", class_="form-control mr-sm-1 my-auto") }} {{ form.password(placeholder="Password",#}
+{#       class_="form-control mr-sm-1 my-auto") }}#}
+{#       <button class="btn btn-light btn-primary m-auto" type="submit">Login</button>#}
+{#     </div>#}
+{#   </form>#}
+{#    <ul class="navbar-nav my-auto">#}
+{#      <li class="nav-item">#}
+{#        <a class="nav-link navbar-text" href="{{ url_for('public.register') }}">Create account</a>#}
+{#      </li>#}
+{#    </ul>#}
     {% endif %}
   </div><!-- /.navbar-collapse -->
 </nav>
