--- a/SUIBE_DID_Data_Manager/templates/nav.html
+++ b/SUIBE_DID_Data_Manager/templates/nav.html
@@ -26,7 +26,7 @@
         <a class="nav-link" href="{{ url_for('public.about') }}">区块链</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('public.about') }}">身份管理</a>
+        <a class="nav-link" href="{{ url_for('public.Identity_manager') }}">身份管理</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('public.about') }}">数据管理</a>
