--- a/SUIBE_DID_Data_Manager/templates/nav.html
+++ b/SUIBE_DID_Data_Manager/templates/nav.html
@@ -22,19 +22,15 @@
 
       {% endif %}
 
-      <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('public.about') }}">区块链</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('public.about') }}">身份管理</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('public.about') }}">数据管理</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="{{ url_for('public.about') }}">数据共享</a>
-      </li>
-
+       <li class="nav-item ">
+           <a class="nav-link" href="{{ url_for('public.about') }}">DID身份数据管理</a>
+       </li>
+       <li class="nav-item">
+           <a class="nav-link" href="/about/">可视化功能</a>
+       </li>
+       <li class="nav-item">
+           <a class="nav-link" href="/about/">数据共享</a>
+       </li>
 
 
 
