--- a/SUIBE_DID_Data_Manager/templates/public/Identity_manager.html
+++ b/SUIBE_DID_Data_Manager/templates/public/Identity_manager.html
@@ -171,7 +171,6 @@
 				<header class="panel-heading">
 					<div class="panel-actions">
 						<a href="#" class="fa fa-caret-down"></a>
-						<a href="#" class="fa fa-times"></a>
 					</div>
 
 					<h2 class="panel-title">DID身份管理</h2>
@@ -191,8 +190,8 @@
                                 <div class="theme-popbod dform">
                                     <form class="theme-signin" name="loginform" action="" method="post">
                                          <ol>
-                                             <li><strong>PublicKey:</strong><input class="ipt" type="text" name="log" value="sc.chinaz.com" size="20" /></li>
-                                             <li><strong>PrivateKey:</strong><input class="ipt" type="password" name="pwd" value="***" size="20" /></li>
+                                             <li><strong>PublicKey:</strong><input class="ipt" type="text" name="log" value="" size="20" /></li>
+                                             <li><strong>PrivateKey:</strong><input class="ipt" type="password" name="pwd" value="" size="20" /></li>
                                              <li><input class="btn btn-primary" type="submit" name="submit" value=" 导入 " /></li>
                                          </ol>
                                     </form>
