--- a/SUIBE_DID_Data_Manager/templates/nav.html
+++ b/SUIBE_DID_Data_Manager/templates/nav.html
@@ -22,7 +22,7 @@
            <a class="nav-link" href="{{ url_for('public.Identity_manager') }}">DID身份数据管理</a>
        </li>
        <li class="nav-item">
-           <a class="nav-link" href="{{ url_for('public.about') }}">可视化功能</a>
+           <a class="nav-link" href="{{ url_for('public.Visualization_tools') }}">可视化功能</a>
        </li>
       <li class="nav-item">
         <a class="nav-link" href="{{ url_for('public.about') }}">数据共享</a>
