--- a/SUIBE_DID_Data_Manager/templates/public/home.html
+++ b/SUIBE_DID_Data_Manager/templates/public/home.html
@@ -123,8 +123,7 @@
                 </div>
             </div>
         </div><!-- /.row -->
-
-
+</div>
 </div>
 
 <script>
@@ -145,8 +144,8 @@
         data:
             {
                 DID: "",
-                key_type:"",
-                result:"",
+                key_type: "weid",
+                result: "",
 
             },
         methods:
